# tvbf-backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  RELEASE_NOTES.md  Taskfile.yml  cliff.toml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: daily-update.yml  merge-main-into-dependencies.yml  release.yml  test.yml
infra/: README.md  backend.tf  data.tf  database.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf  web_app.tf
migrations/: env.py
migrations/versions/: 2668ec5f731e_drop_uq_season_show_number.py  2c05c4a1d7cb_add_show_aka_and_pg_trgm.py  2e6f84ab23fd_add_activity_privacy_columns.py  3a7c5e9b4f10_add_app_auth_token.py  4fbc8b3da8b8_add_login_attempt_table.py  68afd4fae961_add_ratings.py  7e2b91a4c5d3_add_user_email_verified_at.py  8927c889e469_initial_tvmaze_schema.py  9b3a7d2e4c10_add_app_connection.py  9c8a4d2f6e15_auth_token_email_change.py  a213dee9e56f_user_service_initial.py  c1a2f3d4e5b6_index_episode_show_season.py  c2e451aa1ec6_add_immutable_unaccent_and_folded_trgm_.py  c71bc6a53424_add_user_is_admin_column.py  da118e6837e0_drop_user_show_watch_status_column.py  e0ae79467fa2_add_activity_event_table.py  e5867a694d27_add_pg_trgm_gin_index_on_show_name.py  f8ceecec4809_add_invite_table.py  (+1 more)
scripts/: refresh_db.sh  set_password.sh
src/tvbf/: config.py  cookies.py  db.py  (+3 more)
tests/: conftest.py  test_admin_routes.py  test_auth.py  test_browse_cors_and_cache.py  test_browse_queries.py  test_browse_routes.py  test_config.py  test_health.py  test_ingest.py  test_startup_cleanup.py  test_tvmaze_client.py  test_update.py  test_upsert.py
(+147 files in other folders)
