[project]
name = "tvbf"
version = "0.1.0"
description = "TV Binge Friend backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.30",
    "alembic>=1.18.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28",
    "argon2-cffi>=25.1.0",
    "email-validator>=2.0.0",
    "sentry-sdk[fastapi]>=2.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0",
    "respx>=0.23.1",
    "ruff>=0.15.15",
    "pyright>=1.1.409",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tvbf"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["B008"]  # FastAPI's Depends() pattern intentionally uses function calls in defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
# `concurrency = ["thread", "greenlet"]` lets coverage follow code that
# runs inside httpx's ASGITransport — without it, every async function
# called via the test client appears uncovered even though the tests
# pass through it.
source = ["src/tvbf"]
concurrency = ["thread", "greenlet"]
omit = []
[tool.coverage.report]
exclude_also = [
    'if __name__ == "__main__":',
    "raise NotImplementedError",
]
